fix alignment

--- a/images/Jingjing Yang - CV_files/index.css
+++ b/images/Jingjing Yang - CV_files/index.css
@@ -19,10 +19,10 @@ h2 {
 }
 
 #footer {
-  background-color: #f0f1f3;
+  background-color: #9a9fd2;
 }
 
 #footer span,
 a {
-  color: #cdbd6d;
+  color: #cab762;
 }
